# raytracer

./: .gitignore  Cargo.toml  Jenkinsfile  Makefile  flake.nix
camera/src/: lib.rs
config/: example.toml
crates/camera/: Cargo.toml
crates/light/: Cargo.toml
crates/lights/omni_light/: Cargo.toml
crates/lights/omni_light/src/: lib.rs
crates/objects/plane/: Cargo.toml
crates/objects/plane/src/: lib.rs
crates/objects/sphere/: Cargo.toml
crates/plane/: Cargo.toml
crates/ray/: Cargo.toml
crates/ray/src/: lib.rs
crates/sphere/: Cargo.toml
crates/sphere/src/: lib.rs
crates/vec3/src/: lib.rs
light/src/: lib.rs
src/: args.rs  config_parse.rs  main.rs  raytracing.rs
src/utilities/: mod.rs  scene_config.rs
vec3/: Cargo.toml
vec3/src/: lib.rs
